Generify ValkShipBlockTempModifier